--- a/content/css/style.css
+++ b/content/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
 }
 
+
 .btn-basic{
     background-color: #3c6e71;
     color: white;
@@ -25,7 +26,7 @@
 }
 
 body{
-    background-color: #d9d9d9;
+    background-color:  #d9d9d9 !important;
 }
 
 .container {
@@ -70,4 +71,37 @@ li a:hover:not(.active) {
 
 .active {
     background-color: #3c6e71;
+}
+
+
+
+
+
+.myButton {
+    box-shadow: 0px 1px 0px 0px #f0f7fa;
+    background: linear-gradient(to bottom, #3c6e71 5%, #3c6e71 100%);
+    background-color: #3c6e71;
+    border-radius: 6px;
+    border: 1px solid #367074;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px -1px 0px #3c6e71;
+    position: relative;
+    left: 125px;
+}
+
+.myButton:hover {
+    background: linear-gradient(to bottom, #3c6e71 5%, #3c6e71 100%);
+    background-color: #3c6e71;
+}
+
+.myButton:active {
+    position: relative;
+    top: 1px;
 }
