--- a/content/css/products.css
+++ b/content/css/products.css
@@ -7,6 +7,18 @@ body {
     display: flex;
     flex-wrap: wrap
 }
+
+.shoppingCart-container{
+    height: auto;
+    display: flex;
+    flex-wrap: wrap
+}
+
+.shoppingCart-modal-container{
+    width: 80%;
+    height: auto;
+    margin: 10px;
+}
 /* 
 .car-img{
     width: 300px;
@@ -30,6 +42,20 @@ body {
     z-index: 1;
 }
 
+.modal-checkout{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    border-radius: 10px;
+    transform: translate(-50%, -50%);
+    max-width: 60rem;
+    width: 300px;
+    height: 200px;
+    background-color: #f3f3f3;
+    box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
 .modal-container {
     margin: 2rem;
 }
@@ -46,6 +72,48 @@ body {
     outline: none;
 }
 
+.btnContainer{
+    display: flex;
+    justify-content: end;
+}
+
+.buy-button{
+    box-shadow: 0px 1px 0px 0px #f0f7fa;
+    background: linear-gradient(to bottom, #3c6e71 5%, #3c6e71 100%);
+    background-color: #3c6e71;
+    border-radius: 6px;
+    border: 1px solid #367074;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px -1px 0px #3c6e71;
+    position: relative;
+}
+
+.buy-button:hover {
+    background: linear-gradient(to bottom, #3c6e71 5%, #3c6e71 100%);
+    background-color: #51989b;
+}
+
+.buy-button:active {
+    position: relative;
+    top: 1px;
+}
+
+.close-shoppingCart-modal {
+    font-size: 2rem;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+    outline: none;
+}
+
 .overlay {
     position: absolute;
     top: 0;
@@ -53,6 +121,16 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.information-box{
+    width: 80%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    margin: 5px;
+    
 }
 
 
